<resources>
    <string name="app_name">API_IntergrationV4</string>
    <string name="get_weather">Get Weather</string>
    <string name="type_city_name">Type city name</string>
    <string name="enter_city">Enter City</string>
    <string name="city">City</string>
    <string name="temp">Temp:</string>
    <string name="status">Status:</string>
    <string name="humidity">Humidity:</string>
    <string name="weather_icon">weather_icon</string>
    <string name="description">Description:</string>
    <string name="home">Home</string>
    <string name="_5_day_forecast">5 Day Forecast</string>
    <string name="today_s_weather">Today\'s Weather</string>
    <string name="settings">Settings</string>
    <string name="date">Date</string>
    <string name="notifications">Notifications</string>
    <string name="weather_update_intervalss">Weather update intervalss</string>
    <string name="metric">Metric</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="it_s_raining">It\'s raining!</string>
    <string name="don_t_forget_your_umbrella">Don\'t forget your umbrella!</string>
</resources>