<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:minWidth="48dp"
            android:minHeight="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_update_intervalss" />

        <Spinner
            android:id="@+id/spinnerUpdateInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric" />
        <RadioGroup
            android:id="@+id/radioGroupUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius" />
            <RadioButton
                android:id="@+id/radioFahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />
        </RadioGroup>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navigationBarFragment"
            android:name="com.kowal.api_intergrationv4.fragments.NavigationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/ivWeatherIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>
</ScrollView>
