<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    android:padding="10dp"
    android:background="#EEEEEE"
    android:layout_gravity="center">

    <Button
        android:id="@+id/btnHome"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:text="@string/home" />

    <Button
        android:id="@+id/btnForecast"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:text="@string/_5_day_forecast" />

    <Button
        android:id="@+id/btnToday"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:text="@string/today_s_weather" />

    <Button
        android:id="@+id/btnSettings"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        android:text="@string/settings" />

</GridLayout>
